[tool.poetry]
name = "airflow-dags"
version = "0.1.0"
description = ""
authors = ["Jorge Marchan <jmarchan@avantio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
apache-airflow= "^2.10.5"
apache-airflow-providers-cncf-kubernetes = "^10.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
